changed branch configuration for circleci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,9 @@ orbs:
 
 jobs:
   build-and-test:
+    branches:
+      only:
+        - dev
     executor: python/default
     steps:
       - checkout
