--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,10 +4,7 @@ orbs:
   python: circleci/python@0.2.1
 
 jobs:
-  build-and-test:
-    branches:
-      only:
-        - dev
+  build:
     executor: python/default
     steps:
       - checkout
@@ -21,4 +18,8 @@ jobs:
 workflows:
   main:
     jobs:
-      - build-and-test
+      - build:
+          filters:
+            branches:
+              only:
+                - dev
