--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,6 @@
         "**/bower_components": true,
         "**/*.code-search": true,
         "**/.venv": true,
-    }
+    },
+    "python.formatting.provider": "black"
 }
